# mlops-2025

./: pyproject.toml
notebooks/: titanic-survival.ipynb
scripts/: preprocess.py
src/mlops_2025_python_in_production_lab/: __init__.py
src/mlops_2025_python_in_production_lab/scripts/: preprocess.py
src/my-package-name/: main.py  pyproject.toml  titanic-survival.ipynb
