[project]
name = "mlops-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Mahfouz", email = "ali.mahfouzz@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mlops-2025 = "mlops_2025:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
